# logiccraft

./: README.md  pyproject.toml
examples/: README.md
examples/lab1/: part_a.dig  part_a.txt  part_b.dig  part_c.dig  part_c.txt
examples/lab2/: lab2_part1.dig  lab2_part2.dig  lab2_part3.dig
src/logiccraft/: __init__.py  cli.py  equiv.py  expr.py  qm.py  table.py  tokenize.py
tests/: test_equiv.py  test_lab1_specs.py
