[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logiccraft"
version = "0.1.0"
description = "A small digital-logic toolkit: parse boolean expressions, generate truth tables, and minimize logic."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.3"]

[project.scripts]
logiccraft = "logiccraft.cli:main"
